# recoloca-ai

./: .env.example  .gitignore  README.md  activate_env.ps1  activate_env.sh  pytest.ini  requirements.txt  status.md  test_rag_init.py
rag_infra/: .gitignore  README.md  REORGANIZATION_PLAN.md  __init__.py  config.py  create_dirs.py  debug_paths.py  mcp_server.py  pyproject.toml  requirements.txt  setup_rag.py  test_embedding.py  test_rag_system.py  test_retriever.py  test_retriever_import.py
rag_infra/config/: rag_optimization_config.py  trae_mcp_config.json
rag_infra/core_logic/: benchmark_pytorch_performance.py  constants.py  convert_faiss_to_pytorch.py  demo_rag_system.py  embedding_model.py  mcp_server.py  pytorch_gpu_retriever.py  pytorch_optimizations.py  pytorch_performance_benchmark.json  rag_final_integration_results.json  rag_indexer.py  rag_retriever.py  test_pytorch_gpu_retriever.py  test_rag_final_integration.py  test_rag_integration.py  test_rag_simple.py
rag_infra/diagnostics/: fix_import_paths.py  rag_diagnostics.py  rag_fixes.py
rag_infra/docs/: PLANO_REFATORACAO_MCP_SERVER.md
rag_infra/examples/: MCP_CONFIG_GUIDE.md  rtx2060_optimization_example.py  trae_mcp_config_corrected.json  trae_mcp_config_example.json  trae_mcp_config_final.json  trae_mcp_config_python_direct.json  trae_mcp_config_simple.json  trae_mcp_config_simple_forward_slash.json
rag_infra/logs/: setup_report.txt
rag_infra/reports/: migration_log.json
rag_infra/results_and_reports/: consolidated_modules_integration_test_1750404068.json  index_loading_fix_report.json  (+12 more)
(+636 files in other folders)
